run JVM parameters now defined by Grails plugin, and split version number references into gradle.properties